k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beatbox-api
  labels:
    app: beatbox-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: beatbox-api
